# Pucly

./: README.md  db.sqlite3  manage.py  pyproject.toml
base/: admin.py  consumers.py  context_processors.py  forms.py  models.py  routing.py  urls.py  views.py
base/migrations/: 0001_initial.py  0002_usuario_idade.py  0003_auto_20230922_0216.py  0004_auto_20230922_1403.py  0005_profile.py  0006_profile_pontos.py  0007_auto_20231008_2031.py  0008_auto_20231011_1146.py  0009_quillpost.py  0010_delete_quillpost.py  0011_alter_answer_text.py  0012_profile_profile_picture.py  0013_alter_forumpost_tags.py  0014_auto_20231104_1828.py  0015_auto_20231104_1833.py  0016_forumpost_anonimo.py  0017_profile_unread_notifications.py  0018_notification_notification_image.py  0019_alter_notification_options.py  0020_comentario.py  0021_alter_comentario_user.py  0022_palavraproibida.py  0023_auto_20231113_2212.py  0024_auto_20231113_2256.py  0025_auto_20231115_0040.py  0026_auto_20231115_0117.py
base/templatetags/: editar_querry.py  index.py  timesince_pt.py
django_project/: asgi.py  settings.py
static/style/: buttons.css  fundo.css  images.css  pucly.css  reset.css  style.css  text.css
templates/: carrossel-teste.html  carrossel.html  configuracoes.html  deletar.html  editar.html  erro.html  footer.html  forum-creation MORREU.html  forum-creation.html  forum.html  home.html  inicial2.html  login.html  loginwrapper.html  menu.html  navbar.html  not-teste.html  perfilphoto.html  profile.html  profile2MORREU.html  registro.html  resposta.html  senha.html  token.html
